Closed
Bug 1324306
Opened 8 years ago
Closed 8 years ago
webm/vp9 audio breaks off in some youtube musics
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
VERIFIED
FIXED
mozilla53
People
(Reporter: alice0775, Assigned: jya)
References
Details
(Keywords: regression)
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
mozbugz
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
+++ This bug was initially created as a clone of Bug #1323847 +++
+++ This bug was initially created as a clone of Bug #1305284 +++
The problem persists.
Reproducible: always
Steps To Reproduce(e.g. I can be reliably reproduced):
1. Open https://www.youtube.com/watch?v=vmotO-7Bzt4
2. Change resolution to 144p from gear icon
3. Right-click the HTML5 Player, click "Stats for nerds" and ensure 'Mime Type: video/webm; codecs="vp9"'
4. Pause
5. Seek to 0:00
6. Change resolution to 480p from gear icon
7. Play
Actual Results:
At around 0:16, sound breaks off.
I'm feeling it was stopping about hundreds mili-second. It's a large gap.
The progress bar of the HTML5 Player looks like buffer was dropped, or adjusted.(?)
Expected Results:
Finished normally
![]() |
Reporter | |
Comment 1•8 years ago
|
||
[Tracking Requested - why for this release]: The problem is reproducible since Firefox51beta, but not on Firefox50.1.0
status-firefox50:
--- → unaffected
status-firefox51:
--- → affected
status-firefox52:
--- → affected
tracking-firefox51:
--- → ?
tracking-firefox52:
--- → ?
tracking-firefox53:
--- → ?
![]() |
Reporter | |
Comment 2•8 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b535fb46742b36ecc87a8d1fba4a7fad27714588&tochange=d441ac0b35aedaf1df5ffe995cd4ffaaa697ee49
Regressed by: Bug 1280023
Blocks: 1280023
Assignee | ||
Comment 3•8 years ago
|
||
Is this still happening with bug 1323847 in?
![]() |
Reporter | |
Comment 4•8 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #3)
> Is this still happening with bug 1323847 in?
Tested with :
https://hg.mozilla.org/mozilla-central/rev/a3ce1fce4f15616f66ac328e4a562d0117c93a0d
Mozilla/5.0 (Windows NT 10.0; WOW64; rv:53.0) Gecko/20100101 Firefox/53.0 ID:20161218030213
Bug 1323847 did not fix this.
![]() |
Reporter | |
Updated•8 years ago
|
Version: 53 Branch → 51 Branch
Assignee | ||
Comment 5•8 years ago
|
||
This is not a bug in our implementation per say.
We're doing what the specs say we should do.
When the new buffer is appended the source buffer is full (size exceed 12MB). As part of the prepare append algorithm.
https://w3c.github.io/media-source/index.html#sourcebuffer-prepare-append we reject the new append.
The issue here is that the data that's going to be added will overwrite existing data and as such, will not cause the size to increase. But the Prepare Append Algorithm has no way to tell that this will be the case. It can't distinguish new data with about to be overwritten data.
Issue is on YouTube's end really, they add way too much audio in advance (over 5 minutes worth) and flush the entire buffer when a quota exceeded error occur.
:k17e could we raise the issue with YouTube?
Or we can bump again the audio threshold to 30MB like we used to.... there would still be ways to reproduce the problem, were you adding tape to hide the problem. Just less likely to happen.
Flags: needinfo?(ajones)
![]() |
Reporter | |
Comment 6•8 years ago
|
||
(
FWIW, in this case, workaround is as follows
user_pref("media.mediasource.eviction_threshold.audio", 15728640);
)
Assignee | ||
Comment 7•8 years ago
|
||
(In reply to Alice0775 White from comment #6)
> (
> FWIW, in this case, workaround is as follows
> user_pref("media.mediasource.eviction_threshold.audio", 15728640);
> )
yeah, this is what I was thinking.. but that doesn't guarantee the issue won't occur again with different steps...
Richard - why does YouTube flush the entire buffer when the quota is exceeded? Shouldn't it simply stop appending data for a while?
Updated•8 years ago
|
Flags: needinfo?(rleider)
Comment 9•8 years ago
|
||
Track 51+/52+/53+ as some youtube musics are broken.
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → jyavenard
Comment hidden (mozreview-request) |
Comment 11•8 years ago
|
||
mozreview-review |
Comment on attachment 8819847 [details]
Bug 1324306: [MSE] Bump audio memory threshold to 20MB.
https://reviewboard.mozilla.org/r/99462/#review99974
Attachment #8819847 -
Flags: review?(gsquelart) → review+
Comment 12•8 years ago
|
||
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3e76f6a459f9
[MSE] Bump audio memory threshold to 20MB. r=gerald
Updated•8 years ago
|
Flags: needinfo?(ajones)
Comment 13•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 14•8 years ago
|
||
Hi :jya,
Do you think this is worth uplifting to Beta51 & Aurora52?
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 15•8 years ago
|
||
yes... though we also need bug 1323847. Will apply for uplift
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 16•8 years ago
|
||
Comment on attachment 8819847 [details]
Bug 1324306: [MSE] Bump audio memory threshold to 20MB.
Approval Request Comment
[Feature/Bug causing the regression]: 1280023
[User impact if declined]: Discontinuous audio playback in YouTube
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: OP has reported that the issue was fixed by setting a threshold of 15MB, for greater safety, we set it to 20MB
[Needs manual test from QE? If yes, steps to reproduce]: Descriptions provided in bug
[List of other uplifts needed for the feature/fix]: 1323847
[Is the change risky?]: No
[Why is the change risky/not risky?]: bumping the threshold makes us closer to what was there prior 1280023
[String changes made/needed]:
Attachment #8819847 -
Flags: approval-mozilla-beta?
Attachment #8819847 -
Flags: approval-mozilla-aurora?
Comment 17•8 years ago
|
||
Comment on attachment 8819847 [details]
Bug 1324306: [MSE] Bump audio memory threshold to 20MB.
Fix a regression related to webm/vp9 audio. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8819847 -
Flags: approval-mozilla-beta?
Attachment #8819847 -
Flags: approval-mozilla-beta+
Attachment #8819847 -
Flags: approval-mozilla-aurora?
Attachment #8819847 -
Flags: approval-mozilla-aurora+
Comment 18•8 years ago
|
||
Comment 19•8 years ago
|
||
Updated•8 years ago
|
Flags: qe-verify+
Comment 20•8 years ago
|
||
I could not reproduce this issue following the steps from the description. I also used the nightly from 2016-12-18 and Fx51.0b1 - Fx 51.0b4 on Windows 10 x32 and Windows 10 x64. Is there a possibility that the issue is from the site or am I missing something?
Flags: needinfo?(alice0775)
![]() |
Reporter | |
Comment 21•8 years ago
|
||
(In reply to Cristian Comorasu from comment #20)
> I could not reproduce this issue following the steps from the description. I
> also used the nightly from 2016-12-18 and Fx51.0b1 - Fx 51.0b4 on Windows 10
> x32 and Windows 10 x64. Is there a possibility that the issue is from the
> site or am I missing something?
I do not know.
But I can reproduce on the Nightly53.0a1(2016-12-18).
![]() |
Reporter | |
Updated•8 years ago
|
Flags: needinfo?(alice0775)
Comment 22•8 years ago
|
||
I'm hearing a gap 1 second after changing the resolution, 53.0a1 (2016-12-16) Win 7.
No longer reproduce it on 51b11, 52.0a2 (2017-01-05), 53.0a1 (2017-01-04).
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Updated•7 years ago
|
Flags: needinfo?(rleider)
You need to log in
before you can comment on or make changes to this bug.
Description
•