Bug 1324306: [MSE] Bump audio memory threshold to 20MB. r=gerald. a=gchang

MozReview-Commit-ID: LSAv3ujW2TX

--HG--
extra : source : 3e76f6a459f92ee7cf4ea6343e3c139c6cd0f7c6